[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/PNG/Treasure Chest/treasure_chest_1.png" type="Texture" id=1]
[ext_resource path="res://Objects/PNG/Treasure Chest/treasure_chest_3.png" type="Texture" id=2]
[ext_resource path="res://Objects/PNG/Treasure Chest/treasure_chest_2.png" type="Texture" id=3]
[ext_resource path="res://Objects/PNG/Treasure Chest/treasure_chest_4.png" type="Texture" id=4]
[ext_resource path="res://Objects/Chest.gd" type="Script" id=5]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=6]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.1471, 13.1596 )

[sub_resource type="CircleShape2D" id=3]
radius = 6.26608

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 90.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
color = Color( 0.972549, 0.972549, 0.972549, 1 )

[sub_resource type="CircleShape2D" id=5]
radius = 162.689

[node name="Chest" type="Area2D"]
scale = Vector2( 3, 2.5 )
z_index = -1
collision_layer = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0640742, 22.2069 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.749451, 0 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 0

[node name="ExtraEmptyHeart" type="Sprite" parent="Area2D"]
visible = false
scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.04922, -0.749451 )
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="Area2D"]
position = Vector2( -0.672249, -19.6637 )
scale = Vector2( 0.2, 0.2 )
amount = 100
speed_scale = 0.2
process_material = SubResource( 4 )

[node name="HealthRegen" type="Sprite" parent="Area2D"]
visible = false
texture = ExtResource( 6 )

[node name="PlayerNear" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNear"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerNear" to="." method="_on_PlayerNear_body_entered"]
[connection signal="body_exited" from="PlayerNear" to="." method="_on_PlayerNear_body_exited"]
